# MythicPlusBot

./: .envrc  .gitignore  Dockerfile  README.md  bot.py  flake.nix  old  pyproject.toml  railway.toml  requirements.txt  requirements_old.txt  tal.db-journal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0n3rjayp2l1nl1fs17ah11bjknif33i9-source  5pv3ki31vdghybprkksqksflfj2i54p2-source  68acnggp057iqvf4rrg1pzzr45w7mfpp-source  (+2 more)
api_db_converter/: __init__.py
bot/: __main__.py
commands/: admin_cog.py  announcement_cog.py  character_cog.py  errors_cog.py  general.py  general_cog.py  guild_cog.py  leaderboard_cog.py  member_events_cog.py  poll.py  poll_cog.py  raiderIO.py  raider_io_cog.py  talCog.py
configurations/: .gitignore
db/: __init__.py  announcement_db.py  base.py  characterDB.py  character_db.py  character_history_db.py  character_run_db.py  characters.py  default_character_db.py  dungeonRun.py  dungeonRunDB.py  dungeon_run_db.py
docker/: Dockerfile
docs/: Dockerfile
events/: errors.py  events.py  memberEvents.py
objects/: character.py  createPollView.py  dice.py  dungeonRun.py  member.py  myModal.py  myView.py  poll.py  raiderIOService.py  registration.py  scoreColor.py
raiderIO/: __init__.py  character.py  dungeonRun.py  rate_limited_api.py  scoreColor.py
test/: add_character_run_test.py  binary_search_test.py  calc_test.py  test_add_character_run.py
util/: __init__.py  binarySearch.py  compareRuns.py  searchMembers.py  util.py
(+103 files in other folders)
